[macos] problem with editing thai in TextArea

XMLWordPrintable

        This happens with Mac OS X 10.10 only. In a TextArea, setWrapText(true), then input thai characters. The line wrap is not working as expected. Some lines have only 1 character. Please find the attached video.

              Assignee:
              Dipak Kumar (Inactive)
              Reporter:
              Jenny Huang (Inactive)
              Votes:
              1 Vote for this issue
              Watchers:
              8 Start watching this issue

                Created:
                Updated:
                Resolved: