8130721: [macos] problem with editing thai in TextArea

Reviewed-by: kcr, prr